--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
     <string name="app_name">ckl8-250-Homework2</string>
+    <string name="add_task_title"> Please Add A Task </string>
     <string name="task_list_title"> Task List </string>
     <string name="action_settings">Settings</string>
     <string name="action_add">Add</string>
     <string name="action_delete">Delete</string>
     <string name="title_activity_detail">TaskDetailActivity</string>
+    <string name="title_activity_add_task">AddTaskActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
